# SoSe17-FFP-haskell-http2-server

./: .ghci  DESCRIPTION  LICENSE  Plan  README.md  http2-server.cabal  stack.yaml
app/: Main.hs
debug_ca/keys/: 01.pem  ca.crt  ca.key  dh2048.pem  index.txt  myserver.csr  myserver.key
src/: ConnHandler.hs  ConnMonad.hs  ConnMonadImpl.hs  Connection.hs  ConnectionM.hs  ConnectionMonad.hs  ErrorCodes.hs  Frame.hs  Handler.hs  Hpack.hs  Huffman.hs  HuffmanTH.hs  Lib.hs  Logger.hs  LoggerImpl.hs  NetworkImpl.hs  ProjectPrelude.hs  ServerConfig.hs  Settings.hs  SettingsImpl.hs  Stream.hs  Streams.hs  StreamsImpl.hs
src/Frame/: Continuation.hs  Data.hs  Goaway.hs  Headers.hs  RSTStream.hs  Settings.hs  WindowUpdate.hs
src/Frame/Internal/: Padding.hs
src/Handle/: Data.hs  Goaway.hs  Headers.hs  RSTStream.hs  Settings.hs  WindowUpdate.hs
test/: Spec.hs  TestHpack.hs  TestHuffman.hs
