name:                http2-server
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/http2-server#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Frame
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , network
  default-language:    Haskell2010

executable http2-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http2-server
  default-language:    Haskell2010

test-suite http2-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http2-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/authchir/SoSe17-FFP-haskell-http2-server.git
