name:                http2-server
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/http2-server#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Hpack
                     , Huffman
  other-modules:       Connection
                     , Frame
                     , Frame.Data
                     , Frame.Headers
                     , Frame.Internal.Padding
                     , Frame.Settings
                     , Frame.WindowUpdate
                     , Frame.Continuation
                     , Frame.RSTStream
                     , Frame.Goaway
                     , Logger
                     , ProjectPrelude
                     , Handle.Data
                     , Handle.Headers
                     , Handle.Settings
                     , Handle.WindowUpdate
                     , Handle.RSTStream
                     , Handle.Goaway
                     , Settings
                     , Streams
                     , Handler
                     , ServerConfig
                     , ConnMonad
                     , ErrorCodes
                     , SettingsImpl
                     , StreamsImpl
                     , LoggerImpl
                     , ConnectionM
                     , ConnMonadImpl
                     , HuffmanTH
  build-depends:       base >= 4.7 && < 5
                     , binary
                     , bytestring
                     , containers
                     , mtl
                     , network
                     , text
                     , transformers
                     , stm
                     , array
                     , tls == 1.3.11
                     , data-default-class
                     , binary-bits
                     , template-haskell
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , NamedFieldPuns
  ghc-options:        -O2 -Wall -Wincomplete-uni-patterns -Wno-name-shadowing -Wno-orphans

executable http2-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http2-server
                     , text
                     , bytestring
  default-language:    Haskell2010

test-suite http2-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TestHuffman
                       TestHpack
  build-depends:       QuickCheck
                     , HUnit
                     , base
                     , base16-bytestring
                     , binary
                     , bytestring
                     , http2-server
                     , mtl
                     , quickcheck-instances
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  TemplateHaskell

source-repository head
  type:     git
  location: https://github.com/authchir/SoSe17-FFP-haskell-http2-server.git
